# balrog

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: CMakeLists.txt  helloworld.cpp
include/balrog/: grid.hpp  pen.hpp  plot.hpp  series.hpp  seriesrenderer.hpp  types.hpp  vertex.hpp
include/balrog/opengl/: backend.hpp  buffer.hpp  context.hpp  gridrenderer.hpp  program.hpp  seriesrenderer.hpp
src/balrog/: grid.cpp  gridrenderer.cpp  plot.cpp  series.cpp  seriesrenderer.cpp
